--- a/greetings-languages/style.css
+++ b/greetings-languages/style.css
@@ -8,10 +8,9 @@ body{
     text-align: center;
 /*  font-family: 'Fjalla One', sans-serif;*/
    font-family: 'Dancing Script', cursive;
-   background:  linear-gradient(
-    to bottom,
-    hsl(#1fd1f9 , 95%, 99%),
-    hsl(#b621fe, 95%, 84%);
+   background-color: #1fd1f9;
+   background-image: linear-gradient(315deg, #1fd1f9 0%, #b621fe 74%);
+   font-size: 2em;
 }
 
 #root {
@@ -20,25 +19,7 @@ body{
   justify-content: center;
 }
 
-button,
-button:active {
-  background-color: rgb(234,178,156);
-  border: none;
-  width: 42px;
-  height: 40px;
-  border-radius: 100%;
-  text-align: center;
-  box-shadow: 0.2em 0.2em rgb(194, 91, 44);
-  -webkit-box-shadow: 0.2em 0.2em rgb(194, 91, 44);
-  -moz-box-shadow: 0.2em 0.2em rgb(194, 91, 44);
-}
 
-button:focus {
-  translate: 0.2em 0.2em;
-  box-shadow: 0.2em 0.2em rgb(194, 91, 44) inset;
-  -webkit-box-shadow: 0.2em 0.2em rgb(194, 91, 44) inset;
-  -moz-box-shadow: 0.2em 0.2em rgb(194, 91, 44) inset;
-}
 
 /* Clock Body */
 
@@ -50,96 +31,7 @@ button:focus {
   box-shadow: 10px 10px sienna;
 }
 
-/* Display + Stop/Start/Reset Controls */
 
-#time-left {
-  font-size: 70px;
-  text-align: center;
-  background-color: rgb(150,180,175);
-  padding: 20px;
-  border-radius: 20px;
-  box-shadow: 3px 3px rgb(121, 145, 141) inset;
-}
-
-#display-controls {
-  margin: 10px 0;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
-
-#timer-label {
-  font-size: 25px;
-  text-align: center;
-  padding-top: 2px;
-  background-color: rgb(150,180,175);
-  border-radius: 10px;
-  height: 40px;
-  flex: 2;
-  box-shadow: 3px 3px rgb(121, 145, 141) inset;
-}
-
-#timer-ssr {
-  flex: 1;
-  margin-left: 30px;
-  display: flex;
-  justify-content: space-between;
-  flex-start: end;
-}
-
-/* Timer Length Controls */
-
-.length-container {
-  margin-top: 20px;
-  display: flex;
-  flex-direction: row;
-}
-
-.inc-dec-btn-container {
-  margin: 0 auto;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  width: 140px;
-  height:60px;
-}
-
-.break-container, 
-.session-container {
-  text-align: center;
-/*   display: inline-block; */
-  border: 2px solid rgb(234,178,156);
-  padding: 10px;
-  border-radius: 10px;
-  width: 48%;
-}
-
-.timer-length {
-  font-size: 2em;
-}
-
-.break-container,
-.inc-arrow {
-  margin-right: 12px;
-}
-
-
-h1 {
-    margin-top: 0;
-}
-
-.full-table {
-    display: flex;
-    height: 100%;
-    width: 100%;
-}
-
-.table-cell {
-    display: flex;
-    vertical-align: middle;
-    text-align: center;
-}
 
 .card {
     padding: 10px 25px 10px 25px;
@@ -149,46 +41,41 @@ h1 {
     color: #000;
    
 }
+.container {
+    margin  : 0 auto;
+    width   : 45vw;
+    height  : 45vw;
+    border-radius: 100%;
+    border : 5px solid white;
+    box-shadow: 4px 5px 20px 4px #00000026;
+    background: linear-gradient(180deg, #4c4c4c, #2f3e6b, #0b1b17, #0c1f18);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    position: relative;
+    z-index: 100;
 
-
-.clock {
-    display: inline;
-    font-family: 'Bebas Neue', cursive;
-    font-size: 2em;
-   
 }
 
-.time {
-    display: inline;
-    min-width: 37px;
+.aurora_holder {
+    width: 100vw;
+    height: 100vw;
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
 
-.colon {
-    font-size: 1.1em;
-    display: inline-block;
+.aurora-1 {
+    width: 100vw;
+    height: 100vw;
+    animation: aurora 15s linear infinite;
+    background: rgb(91,204,172);
+    background: rgb(91,204,172);
+    background: linear-gradient(90deg, rgba(91,204,172,0) 0%, rgba(91,204,178,0.28895308123249297) 8%, rgba(91,204,178,0.4290091036414566) 16%, rgba(91,204,178,0.3113620448179272) 25%, rgba(91,204,178,0.227328431372549) 33%, rgba(125,166,187,0.4962359943977591) 45%, rgba(151,138,194,0.34217436974789917) 54%, rgba(168,119,198,0.33657212885154064) 60%, rgba(183,103,202,0) 67%, rgba(193,91,204,0.09567577030812324) 72%, rgba(193,91,204,0.24693627450980393) 81%, rgba(193,91,204,0.21052170868347342) 89%, rgba(193,91,204,0.006039915966386533) 100%);
 }
 
-.date {
-    display: inline;
-    min-width: 162px;
-    font-size: 2em;
-    padding-right: 30px;
-}
-.greet{
-    
-    display:inline;
-    font-family: 'Dancing Script', cursive;
-    font-size: 2rem;
-     padding-right: 30px;
-}
-
-   /* Time left style   */
-
-   .h3{
-    margin: 0 ;
-    font-size: 2em;
-    font-weight: 100;
-   }
 
         .box{
             display: inline-block;
