--- a/greetings-languages/style.css
+++ b/greetings-languages/style.css
@@ -1,116 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@600&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap");
 /* General */
 
-body{
-
-    line-height: 1.6;
-    text-align: center;
-/*  font-family: 'Fjalla One', sans-serif;*/
-   font-family: 'Dancing Script', cursive;
-   background-color: #1fd1f9;
-   background-image: linear-gradient(315deg, #1fd1f9 0%, #b621fe 74%);
-   font-size: 2em;
+body {
+  max-width: 1920px;
+  min-height: 90vh;
+  display: grid;
+  place-items: center;
+  line-height: 1.6;
+  text-align: center;
+  /*  font-family: 'Fjalla One', sans-serif;*/
+  font-family: 'Dancing Script', cursive;
+  background-color: #1fd1f9;
+  background-image: linear-gradient(315deg, #1fd1f9 0%, #b621fe 74%);
+  font-size: 2em;
 }
 
-#root {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-
-
-/* Clock Body */
-
-.clock-container {
-  background-color: rgb(240, 240, 190); 
-  width: 350px;
-  border-radius: 20px;
-  padding: 30px;
-  box-shadow: 10px 10px sienna;
-}
-
-
-
-.card {
-    padding: 10px 25px 10px 25px;
-    
-    background: rgba(235, 236, 237, 0.3);
-    width: 100%;
-    color: #000;
-   
-}
-.container {
-    margin  : 0 auto;
-    width   : 45vw;
-    height  : 45vw;
-    border-radius: 100%;
-    border : 5px solid white;
-    box-shadow: 4px 5px 20px 4px #00000026;
-    background: linear-gradient(180deg, #4c4c4c, #2f3e6b, #0b1b17, #0c1f18);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    position: relative;
-    z-index: 100;
-
-}
-
-.aurora_holder {
-    width: 100vw;
-    height: 100vw;
-    border-radius: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-}
-
-.aurora-1 {
-    width: 100vw;
-    height: 100vw;
-    animation: aurora 15s linear infinite;
-    background: rgb(91,204,172);
-    background: rgb(91,204,172);
-    background: linear-gradient(90deg, rgba(91,204,172,0) 0%, rgba(91,204,178,0.28895308123249297) 8%, rgba(91,204,178,0.4290091036414566) 16%, rgba(91,204,178,0.3113620448179272) 25%, rgba(91,204,178,0.227328431372549) 33%, rgba(125,166,187,0.4962359943977591) 45%, rgba(151,138,194,0.34217436974789917) 54%, rgba(168,119,198,0.33657212885154064) 60%, rgba(183,103,202,0) 67%, rgba(193,91,204,0.09567577030812324) 72%, rgba(193,91,204,0.24693627450980393) 81%, rgba(193,91,204,0.21052170868347342) 89%, rgba(193,91,204,0.006039915966386533) 100%);
-}
-
-
-        .box{
-            display: inline-block;
-            display: inline-block;
-            color: #fff;
-            padding: 10px;
-            min-width: 60px;
-        }
-        #days{
-            background-color:#3e4545;
-        }
-        #hours{
-            background-color:#556363;
-        }
-        #minutes{
-            background-color:#6d7c7c;
-        }
-        h2{
-            display: inline-block;
-            margin-right: 10px;
-            margin-block-start: 5px;
-        }
-        h3{
-            text-align: center;
-            
-        }
-        .small{
-            font-size: 15px;
-            font-weight: 100;
-        }
 
 .overlay {
   width: 100%;
   max-width: 1140px;
-  max-height: 640px;
+  max-height: 90vh;
   padding: 8rem 6rem;
   display: flex;
   align-items: center;
@@ -119,65 +29,148 @@ body{
   border-radius: 2rem;
   border: 1px solid rgba(255, 255, 255, 0.125);
 }
+
+
+
+.card {
+  padding: 10px 25px 10px 25px;
+  background: rgba(235, 236, 237, 0.3);
+  width: 100%;
+  color: #000;
+
+}
+
+.container_aurora {
+  margin: 0 auto;
+  width: 45vw;
+  height: 45vw;
+  border-radius: 100%;
+  border: 5px solid white;
+  box-shadow: 4px 5px 20px 4px #00000026;
+  background: linear-gradient(180deg, #4c4c4c, #2f3e6b, #0b1b17, #0c1f18);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
+  z-index: 100;
+
+}
+
+.aurora_holder {
+  width: 100vw;
+  height: 100vw;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.aurora-1 {
+  width: 100vw;
+  height: 100vw;
+  animation: aurora 15s linear infinite;
+  background: rgb(91, 204, 172);
+  background: rgb(91, 204, 172);
+  background: linear-gradient(90deg, rgba(91, 204, 172, 0) 0%, rgba(91, 204, 178, 0.28895308123249297) 8%, rgba(91, 204, 178, 0.4290091036414566) 16%, rgba(91, 204, 178, 0.3113620448179272) 25%, rgba(91, 204, 178, 0.227328431372549) 33%, rgba(125, 166, 187, 0.4962359943977591) 45%, rgba(151, 138, 194, 0.34217436974789917) 54%, rgba(168, 119, 198, 0.33657212885154064) 60%, rgba(183, 103, 202, 0) 67%, rgba(193, 91, 204, 0.09567577030812324) 72%, rgba(193, 91, 204, 0.24693627450980393) 81%, rgba(193, 91, 204, 0.21052170868347342) 89%, rgba(193, 91, 204, 0.006039915966386533) 100%);
+}
+
+
+.box {
+  display: inline-block;
+  color: #fff;
+  padding: 10px;
+  min-width: 60px;
+  min-height: 60px;
+  box-shadow: 0 0.75rem 2rem 0 rgba(0, 0, 0, 0.1);
+  border-radius: 2rem;
+  border: 1px solid rgba(255, 255, 255, 0.125);
+}
+
+#semaine {
+  background-color: #3e4545;
+}
+
+#hours {
+  background-color: #556363;
+}
+
+#minutes {
+  background-color: #6d7c7c;
+}
+
+#secondes {
+  background-color: #6d5c64;
+}
+
 /* 6 */
 .btn-6 {
-  background: rgb(247,150,192);
-background: radial-gradient(circle, rgba(247,150,192,1) 0%, rgba(118,174,241,1) 100%);
+  background: rgb(247, 150, 192);
+  background: radial-gradient(circle, rgba(247, 150, 192, 1) 0%, rgba(118, 174, 241, 1) 100%);
   line-height: 42px;
   padding: 0;
   border: none;
 }
+
 .btn-6 span {
   position: relative;
   display: block;
   width: 100%;
   height: 100%;
 }
+
 .btn-6:before,
 .btn-6:after {
   position: absolute;
   content: "";
   height: 0%;
   width: 1px;
- box-shadow:
-   -1px -1px 20px 0px rgba(255,255,255,1),
-   -4px -4px 5px 0px rgba(255,255,255,1),
-   7px 7px 20px 0px rgba(0,0,0,.4),
-   4px 4px 5px 0px rgba(0,0,0,.3);
+  box-shadow:
+    -1px -1px 20px 0px rgba(255, 255, 255, 1),
+    -4px -4px 5px 0px rgba(255, 255, 255, 1),
+    7px 7px 20px 0px rgba(0, 0, 0, .4),
+    4px 4px 5px 0px rgba(0, 0, 0, .3);
 }
+
 .btn-6:before {
   right: 0;
   top: 0;
   transition: all 500ms ease;
 }
+
 .btn-6:after {
   left: 0;
   bottom: 0;
   transition: all 500ms ease;
 }
-.btn-6:hover{
+
+.btn-6:hover {
   background: transparent;
   color: #76aef1;
   box-shadow: none;
 }
+
 .btn-6:hover:before {
   transition: all 500ms ease;
   height: 100%;
 }
+
 .btn-6:hover:after {
   transition: all 500ms ease;
   height: 100%;
 }
+
 .btn-6 span:before,
 .btn-6 span:after {
   position: absolute;
   content: "";
   box-shadow:
-   -1px -1px 20px 0px rgba(255,255,255,1),
-   -4px -4px 5px 0px rgba(255,255,255,1),
-   7px 7px 20px 0px rgba(0,0,0,.4),
-   4px 4px 5px 0px rgba(0,0,0,.3);
+    -1px -1px 20px 0px rgba(255, 255, 255, 1),
+    -4px -4px 5px 0px rgba(255, 255, 255, 1),
+    7px 7px 20px 0px rgba(0, 0, 0, .4),
+    4px 4px 5px 0px rgba(0, 0, 0, .3);
 }
+
 .btn-6 span:before {
   left: 0;
   top: 0;
@@ -185,6 +178,7 @@ background: radial-gradient(circle, rgba(247,150,192,1) 0%, rgba(118,174,241,1) 
   height: .5px;
   transition: all 500ms ease;
 }
+
 .btn-6 span:after {
   right: 0;
   bottom: 0;
@@ -192,9 +186,11 @@ background: radial-gradient(circle, rgba(247,150,192,1) 0%, rgba(118,174,241,1) 
   height: .5px;
   transition: all 500ms ease;
 }
+
 .btn-6 span:hover:before {
   width: 100%;
 }
+
 .btn-6 span:hover:after {
   width: 100%;
 }
