--- a/greetings-languages/style.css
+++ b/greetings-languages/style.css
@@ -12,7 +12,8 @@ body {
   /*  font-family: 'Fjalla One', sans-serif;*/
   font-family: 'Dancing Script', cursive;
   background-color: #1fd1f9;
-  background-image: linear-gradient(315deg, #1fd1f9 0%, #b621fe 74%);
+ border-image-source: linear-gradient(to left, #743ad5, #d53a9d);
+    background: -webkit-linear-gradient(#743ad5, #d53a9d);
   font-size: 2em;
 }
 
