--- a/style.css
+++ b/style.css
@@ -670,7 +670,12 @@ html {
   initial-value: 132deg;
   inherits: false;
 }
-.card {
+:root {
+  --card-height: 65vh;
+  --card-width: calc(var(--card-height) );
+}
+
+.cadre {
   background: #fff;
   width: var(--card-width);
   height: var(--card-height);
@@ -681,23 +686,9 @@ html {
   align-items: center;
   text-align: center;
   display: flex;
-  font-size: 1.5em;
-  color: rgba(88, 199, 250, 0);
-  cursor: pointer;
-  font-family: cursive;
 }
 
-.card:hover {
-  color: rgb(88, 199, 250);
-  transition: color 1s;
-}
-
-.card:hover:before, .card:hover:after {
-  animation: none;
-  opacity: 0;
-}
-
-.card::before {
+.cadre::before {
   content: "";
   width: 104%;
   height: 104%;
@@ -710,7 +701,7 @@ html {
   animation: spin 2.5s linear infinite;
 }
 
-.card::after {
+.cadre::after {
   position: absolute;
   content: "";
   top: calc(var(--card-height) / 6);
