--- a/style.css
+++ b/style.css
@@ -9,26 +9,6 @@
   --greyDark: #9baacf;
 }
 
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
-
-html {
-  box-sizing: border-box;
-  font-size: 62.5%;
-  overflow-y: scroll;
-  background: var(--greyLight-1);
-}
-@media screen and (min-width: 900px) {
-  html {
-    font-size: 75%;
-  }
-}
-
 /*  SWITCH  */
 .switch {
   grid-column: 1/2;
@@ -665,11 +645,12 @@ html {
   color: #ea4c89;
 }
 
-@property --rotate {
+--rotate {
   syntax: "<angle>";
   initial-value: 132deg;
   inherits: false;
 }
+
 :root {
   --card-height: 65vh;
   --card-width: calc(var(--card-height) );
