--- a/style.scss
+++ b/style.scss
@@ -15,27 +15,7 @@
     -0.2rem -0.2rem 0.5rem var(--white);
   $inner-shadow: inset 0.2rem 0.2rem 0.5rem var(--greyLight-2),
     inset -0.2rem -0.2rem 0.5rem var(--white);
-  
-  *,
-  *::before,
-  *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-  }
-  
-  html {
-    box-sizing: border-box;
-    font-size: 62.5%; // 1rem = 10px    100% = 16px
-    overflow-y: scroll;
-    background: var(--greyLight-1);
-  
-    @media screen and (min-width: 900px) {
-      font-size: 75%;
-    }
-  }
-  
-
+ 
   
   /*  SWITCH  */
   .switch {
@@ -761,7 +741,7 @@
     color: #ea4c89;
   }
 
-@property --rotate {
+--rotate {
     syntax: "<angle>";
     initial-value: 132deg;
     inherits: false;
