--- a/style.css
+++ b/style.css
@@ -645,15 +645,10 @@
   color: #ea4c89;
 }
 
---rotate {
-  syntax: "<angle>";
-  initial-value: 132deg;
-  inherits: false;
-}
-
 :root {
   --card-height: 65vh;
   --card-width: calc(var(--card-height) );
+  --rotate:132deg;
 }
 
 .cadre {
