--- a/style.scss
+++ b/style.scss
@@ -741,17 +741,14 @@
     color: #ea4c89;
   }
 
---rotate {
-    syntax: "<angle>";
-    initial-value: 132deg;
-    inherits: false;
-  }
+
 
 $radius : 5%;
 
 :root {
   --card-height: 65vh;
   --card-width: calc(var(--card-height) );
+  --rotate :132deg;  
 }
 .cadre {
   background: #fff;
