--- a/style.css
+++ b/style.css
@@ -220,6 +220,14 @@
   z-index: 200;
   color: white;
 }
+.clock .semaine {
+  position: absolute;
+  transform-origin: bottom;
+  bottom: 4rem;
+  border-radius: 0.2rem;
+  z-index: 200;
+  color: white;
+}
 .clock .hours {
   width: 0.4rem;
   height: 3.2rem;
@@ -666,6 +674,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  display: inline-block;
 }
 
 .cadre::before {
